@@ -2,6 +2,8 @@ package ee.taltech.iti0202.strings;
 import java.util.HashMap;
 import java.util.Map;
 import java.util.List;
+import java.util.ArrayList;
+import java.util.Arrays;
 
 
 public class Main {
@@ -84,11 +86,11 @@ public class Main {
         System.out.println(mostFrequentWord(new String[]{"SPAM", "SPAM", "eggs", "bacon", "and", "SPAM"})); // SPAM
 
         System.out.println();
-        System.out.println(onlyEvenWords(List.of("tere", "tere", "vanakere"))); // [tere]
-        System.out.println(onlyEvenWords(List.of("foo", "bar", "baz", "baz", "bar", "foo"))); // [baz, bar, foo]
-        System.out.println(onlyEvenWords(List.of("a", "b", "b", "a"))); // [b, a]
-        System.out.println(onlyEvenWords(List.of("a", "b", "a", "b"))); // [a, b]
-        System.out.println(onlyEvenWords(List.of("eggs", "bacon", "SPAM", "ham", "SPAM", "SPAM"))); // [SPAM]
+        System.out.println(onlyEvenWords(Arrays.asList("tere", "tere", "vanakere"))); // [tere]
+        System.out.println(onlyEvenWords(Arrays.asList("foo", "bar", "baz", "baz", "bar", "foo"))); // [baz, bar, foo]
+        System.out.println(onlyEvenWords(Arrays.asList("a", "b", "b", "a"))); // [b, a]
+        System.out.println(onlyEvenWords(Arrays.asList("a", "b", "a", "b"))); // [a, b]
+        System.out.println(onlyEvenWords(Arrays.asList("eggs", "bacon", "SPAM", "ham", "SPAM", "SPAM"))); // [SPAM]
 
         System.out.println();
         System.out.println(onlyEvenCharacters("aaa")); // a
